Finish second pass of Implementation section

--- a/src/diagrams/upstream-neurons.ejs
+++ b/src/diagrams/upstream-neurons.ejs
@@ -126,12 +126,9 @@
     <% } %>
 
     <figcaption>
-        <p><a href="#2.2-upstream-neurons" class="figure-number">5</a>:
+        <p><a href="#figure-6" class="figure-number">6</a>:
         For each of the underlying layers <code>conv2d2</code> and, more deeply, <code>conv2d1</code>, NMF recovers the neurons that contribute to the two NMF factors and the weighted amount they contribute to each factor, shown above.
         </p>
-        <p>
-            The two NMF factors correspond to
-            high and low frequencies, as becomes apparent in their feature visualizations. (Left column).
-        </p>
+        <p>Left column: Feature visualization of the NMF factors.</p>
     </figcaption>
 </figure>
