Convert black and white images to viridis

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -311,7 +311,7 @@
       <figcaption>
           <p>
             <a href="#figure-7" class="figure-number">7</a>:
-            Responses to a grid of synthetic stimuli varying frequency and angle of orientation, against HF-factor and LF-factor from <code>conv2d2</code>. Activation values are normalized across all units shown, ranging from 0 to 1.
+            Responses to a grid of synthetic stimuli varying frequency and angle of orientation, against HF-factor and LF-factor from <code>conv2d2</code>. Activation values are normalized across all units shown, ranging from 0 to 1. <span class="viridis" style="display: inline; margin-left: 5px; padding-right: 64px;" />
           </p>
       </figcaption>
       </figure>
