More diagram fixes

--- a/src/diagrams/upstream-neurons.ejs
+++ b/src/diagrams/upstream-neurons.ejs
@@ -81,10 +81,10 @@
     }
 
     .unit {
-        display: block;
+      display: block;
+      min-width: 50px;
     }
     .unit.factor {
-      width: 60px;
     }
 
     .unit .bar {
